Implemented auto refresh, slide animation, room feature

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,10 @@
       <!-- Your HTML goes here! -->
     </div>
     <div id='send'>
+     <select>
+      <option value="Main">Main</option>
+
+    </select>
       <form class="submit">
         <input id="message" type=text placeholder="Write a chat" required> 
         <input class="submit" type="submit" value="Send Message">  
@@ -34,7 +38,7 @@
     </div>
     <div id="chats">
       <div id='roomSelect'>
-
+   
       </div>
       
     </div>
