Added new room implementation.  Banner to homepage, added room minitags.  Basically went above and beyond duty

--- a/client/index.html
+++ b/client/index.html
@@ -24,17 +24,17 @@
 
     <div id="main">
       <h1>chatterbox</h1>
+      <div id='send'>
+       <select>
+        <option value="Main">Main</option>
+        <option value="New Room">New Room</option>        
+      </select>
+        <form class="submit">
+          <input id="message" type=text placeholder="Write a chat" required> 
+          <input class="submit" type="submit" value="Send Message">  
+        </form>
+      </div>
       <!-- Your HTML goes here! -->
-    </div>
-    <div id='send'>
-     <select>
-      <option value="Main">Main</option>
-
-    </select>
-      <form class="submit">
-        <input id="message" type=text placeholder="Write a chat" required> 
-        <input class="submit" type="submit" value="Send Message">  
-      </form>
     </div>
     <div id="chats">
       <div id='roomSelect'>
